parser/y.output

state 0
	$accept: .expressions $end 

	String  shift 19
	Number  shift 20
	Print  shift 22
	Label  shift 7
	Type  shift 23
	Get  shift 25
	Put  shift 26
	Post  shift 27
	Delete  shift 28
	Head  shift 29
	Comment  shift 5
	Bool  shift 21
	Write  shift 30
	Append  shift 32
	StringFunc  shift 36
	If  shift 33
	For  shift 34
	Read  shift 31
	.  error

	expressions  goto 1
	expression  goto 2
	assignment  goto 3
	statement  goto 4
	Value  goto 6
	print_st  goto 9
	label_st  goto 10
	type_st  goto 11
	arith_st  goto 12
	network_st  goto 13
	field_st  goto 8
	write_st  goto 14
	read_st  goto 15
	append_st  goto 16
	if_st  goto 17
	for_st  goto 18
	string_st  goto 35
	eval_expr  goto 24

state 1
	$accept:  expressions.$end 
	expressions:  expressions.expression 

	$end  accept
	String  shift 19
	Number  shift 20
	Print  shift 22
	Label  shift 7
	Type  shift 23
	Get  shift 25
	Put  shift 26
	Post  shift 27
	Delete  shift 28
	Head  shift 29
	Comment  shift 5
	Bool  shift 21
	Write  shift 30
	Append  shift 32
	StringFunc  shift 36
	If  shift 33
	For  shift 34
	Read  shift 31
	.  error

	expression  goto 37
	assignment  goto 3
	statement  goto 4
	Value  goto 6
	print_st  goto 9
	label_st  goto 10
	type_st  goto 11
	arith_st  goto 12
	network_st  goto 13
	field_st  goto 8
	write_st  goto 14
	read_st  goto 15
	append_st  goto 16
	if_st  goto 17
	for_st  goto 18
	string_st  goto 35
	eval_expr  goto 24

state 2
	expressions:  expression.    (1)

	.  reduce 1 (src line 38)


state 3
	expression:  assignment.    (3)

	.  reduce 3 (src line 42)


state 4
	expression:  statement.    (4)

	.  reduce 4 (src line 44)


state 5
	expression:  Comment.    (5)

	.  reduce 5 (src line 45)


state 6
	expression:  Value.    (6)

	.  reduce 6 (src line 46)


state 7
	label_st:  Label.    (18)
	assignment:  Label.'=' eval_expr 
	assignment:  Label.'=' network_st 
	assignment:  Label.'=' json_st 
	assignment:  Label.'=' jsonstr_st 
	eval_expr:  Label.    (58)
	field_st:  Label.'.' Label 

	'='  shift 38
	'+'  reduce 58 (src line 122)
	'-'  reduce 58 (src line 122)
	'*'  reduce 58 (src line 122)
	'/'  reduce 58 (src line 122)
	'.'  shift 39
	.  reduce 18 (src line 61)


state 8
	statement:  field_st.    (12)
	assignment:  field_st.'=' json_st 
	assignment:  field_st.'=' eval_expr 
	assignment:  field_st.'=' jsonstr_st 
	assignment:  field_st.'=' network_st 
	eval_expr:  field_st.    (61)
	field_st:  field_st.'.' Label 

	'='  shift 40
	'+'  reduce 61 (src line 125)
	'-'  reduce 61 (src line 125)
	'*'  reduce 61 (src line 125)
	'/'  reduce 61 (src line 125)
	'.'  shift 41
	.  reduce 12 (src line 54)


state 9
	statement:  print_st.    (7)

	.  reduce 7 (src line 48)


state 10
	statement:  label_st.    (8)

	.  reduce 8 (src line 50)


state 11
	statement:  type_st.    (9)

	.  reduce 9 (src line 51)


state 12
	statement:  arith_st.    (10)
	eval_expr:  arith_st.    (59)

	'+'  reduce 59 (src line 123)
	'-'  reduce 59 (src line 123)
	'*'  reduce 59 (src line 123)
	'/'  reduce 59 (src line 123)
	.  reduce 10 (src line 52)


state 13
	statement:  network_st.    (11)

	.  reduce 11 (src line 53)


state 14
	statement:  write_st.    (13)

	.  reduce 13 (src line 55)


state 15
	statement:  read_st.    (14)
	eval_expr:  read_st.    (63)

	'+'  reduce 63 (src line 127)
	'-'  reduce 63 (src line 127)
	'*'  reduce 63 (src line 127)
	'/'  reduce 63 (src line 127)
	.  reduce 14 (src line 56)


state 16
	statement:  append_st.    (15)

	.  reduce 15 (src line 57)


state 17
	statement:  if_st.    (16)

	.  reduce 16 (src line 58)


state 18
	statement:  for_st.    (17)

	.  reduce 17 (src line 59)


state 19
	Value:  String.    (19)
	eval_expr:  String.    (57)

	'+'  reduce 57 (src line 121)
	'-'  reduce 57 (src line 121)
	'*'  reduce 57 (src line 121)
	'/'  reduce 57 (src line 121)
	.  reduce 19 (src line 64)


state 20
	Value:  Number.    (20)
	eval_expr:  Number.    (56)

	'+'  reduce 56 (src line 119)
	'-'  reduce 56 (src line 119)
	'*'  reduce 56 (src line 119)
	'/'  reduce 56 (src line 119)
	.  reduce 20 (src line 65)


state 21
	Value:  Bool.    (21)
	eval_expr:  Bool.    (60)

	'+'  reduce 60 (src line 124)
	'-'  reduce 60 (src line 124)
	'*'  reduce 60 (src line 124)
	'/'  reduce 60 (src line 124)
	.  reduce 21 (src line 65)


state 22
	print_st:  Print.'(' Value ')' 
	print_st:  Print.'(' Label ')' 
	print_st:  Print.'(' ')' 
	print_st:  Print.'(' field_st ')' 
	print_st:  Print.'(' network_st ')' 
	print_st:  Print.'(' jsonstr_st ')' 
	print_st:  Print.'(' arith_st ')' 
	print_st:  Print.'(' string_st ')' 

	'('  shift 42
	.  error


state 23
	type_st:  Type.'(' Label ')' 

	'('  shift 43
	.  error


state 24
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	.  error


state 25
	network_st:  Get.String header_st body_st 

	String  shift 48
	.  error


state 26
	network_st:  Put.String header_st body_st 

	String  shift 49
	.  error


state 27
	network_st:  Post.String header_st body_st 

	String  shift 50
	.  error


state 28
	network_st:  Delete.String header_st body_st 

	String  shift 51
	.  error


state 29
	network_st:  Head.String header_st body_st 

	String  shift 52
	.  error


state 30
	write_st:  Write.'(' Value ',' String ')' 
	write_st:  Write.'(' Label ',' String ')' 
	write_st:  Write.'(' jsonstr_st ',' String ')' 

	'('  shift 53
	.  error


state 31
	read_st:  Read.'(' String ')' 

	'('  shift 54
	.  error


state 32
	append_st:  Append.'(' Value ',' String ')' 
	append_st:  Append.'(' Label ',' String ')' 
	append_st:  Append.'(' jsonstr_st ',' String ')' 

	'('  shift 55
	.  error


state 33
	if_st:  If.Label CodeBlock 
	if_st:  If.Bool CodeBlock 
	if_st:  If.field_st CodeBlock 

	Label  shift 56
	Bool  shift 57
	.  error

	field_st  goto 58

state 34
	for_st:  For.Number CodeBlock 

	Number  shift 59
	.  error


state 35
	eval_expr:  string_st.    (62)

	.  reduce 62 (src line 126)


state 36
	string_st:  StringFunc.'(' Label ')' 
	string_st:  StringFunc.'(' field_st ')' 

	'('  shift 60
	.  error


state 37
	expressions:  expressions expression.    (2)

	.  reduce 2 (src line 40)


state 38
	assignment:  Label '='.eval_expr 
	assignment:  Label '='.network_st 
	assignment:  Label '='.json_st 
	assignment:  Label '='.jsonstr_st 

	String  shift 66
	Number  shift 65
	Label  shift 67
	Get  shift 25
	Put  shift 26
	Post  shift 27
	Delete  shift 28
	Head  shift 29
	Json  shift 72
	JsonStr  shift 73
	Bool  shift 69
	StringFunc  shift 36
	Read  shift 31
	.  error

	arith_st  goto 68
	network_st  goto 62
	field_st  goto 70
	read_st  goto 71
	jsonstr_st  goto 64
	string_st  goto 35
	json_st  goto 63
	eval_expr  goto 61

state 39
	field_st:  Label '.'.Label 

	Label  shift 74
	.  error


state 40
	assignment:  field_st '='.json_st 
	assignment:  field_st '='.eval_expr 
	assignment:  field_st '='.jsonstr_st 
	assignment:  field_st '='.network_st 

	String  shift 66
	Number  shift 65
	Label  shift 67
	Get  shift 25
	Put  shift 26
	Post  shift 27
	Delete  shift 28
	Head  shift 29
	Json  shift 72
	JsonStr  shift 73
	Bool  shift 69
	StringFunc  shift 36
	Read  shift 31
	.  error

	arith_st  goto 68
	network_st  goto 78
	field_st  goto 70
	read_st  goto 71
	jsonstr_st  goto 77
	string_st  goto 35
	json_st  goto 75
	eval_expr  goto 76

state 41
	field_st:  field_st '.'.Label 

	Label  shift 79
	.  error


state 42
	print_st:  Print '('.Value ')' 
	print_st:  Print '('.Label ')' 
	print_st:  Print '('.')' 
	print_st:  Print '('.field_st ')' 
	print_st:  Print '('.network_st ')' 
	print_st:  Print '('.jsonstr_st ')' 
	print_st:  Print '('.arith_st ')' 
	print_st:  Print '('.string_st ')' 

	String  shift 19
	Number  shift 20
	Label  shift 81
	Get  shift 25
	Put  shift 26
	Post  shift 27
	Delete  shift 28
	Head  shift 29
	JsonStr  shift 73
	Bool  shift 21
	StringFunc  shift 36
	Read  shift 31
	')'  shift 82
	.  error

	Value  goto 80
	arith_st  goto 86
	network_st  goto 84
	field_st  goto 83
	read_st  goto 71
	jsonstr_st  goto 85
	string_st  goto 87
	eval_expr  goto 24

state 43
	type_st:  Type '('.Label ')' 

	Label  shift 88
	.  error


state 44
	arith_st:  eval_expr '+'.eval_expr 

	String  shift 66
	Number  shift 65
	Label  shift 67
	Bool  shift 69
	StringFunc  shift 36
	Read  shift 31
	.  error

	arith_st  goto 68
	field_st  goto 70
	read_st  goto 71
	string_st  goto 35
	eval_expr  goto 89

state 45
	arith_st:  eval_expr '-'.eval_expr 

	String  shift 66
	Number  shift 65
	Label  shift 67
	Bool  shift 69
	StringFunc  shift 36
	Read  shift 31
	.  error

	arith_st  goto 68
	field_st  goto 70
	read_st  goto 71
	string_st  goto 35
	eval_expr  goto 90

state 46
	arith_st:  eval_expr '*'.eval_expr 

	String  shift 66
	Number  shift 65
	Label  shift 67
	Bool  shift 69
	StringFunc  shift 36
	Read  shift 31
	.  error

	arith_st  goto 68
	field_st  goto 70
	read_st  goto 71
	string_st  goto 35
	eval_expr  goto 91

state 47
	arith_st:  eval_expr '/'.eval_expr 

	String  shift 66
	Number  shift 65
	Label  shift 67
	Bool  shift 69
	StringFunc  shift 36
	Read  shift 31
	.  error

	arith_st  goto 68
	field_st  goto 70
	read_st  goto 71
	string_st  goto 35
	eval_expr  goto 92

48: shift/reduce conflict (shift 95(4), red'n 67(0)) on Header
state 48
	network_st:  Get String.header_st body_st 
	header_st: .    (67)

	Header  shift 95
	.  reduce 67 (src line 135)

	header_sg  goto 94
	header_st  goto 93

49: shift/reduce conflict (shift 95(4), red'n 67(0)) on Header
state 49
	network_st:  Put String.header_st body_st 
	header_st: .    (67)

	Header  shift 95
	.  reduce 67 (src line 135)

	header_sg  goto 94
	header_st  goto 96

50: shift/reduce conflict (shift 95(4), red'n 67(0)) on Header
state 50
	network_st:  Post String.header_st body_st 
	header_st: .    (67)

	Header  shift 95
	.  reduce 67 (src line 135)

	header_sg  goto 94
	header_st  goto 97

51: shift/reduce conflict (shift 95(4), red'n 67(0)) on Header
state 51
	network_st:  Delete String.header_st body_st 
	header_st: .    (67)

	Header  shift 95
	.  reduce 67 (src line 135)

	header_sg  goto 94
	header_st  goto 98

52: shift/reduce conflict (shift 95(4), red'n 67(0)) on Header
state 52
	network_st:  Head String.header_st body_st 
	header_st: .    (67)

	Header  shift 95
	.  reduce 67 (src line 135)

	header_sg  goto 94
	header_st  goto 99

state 53
	write_st:  Write '('.Value ',' String ')' 
	write_st:  Write '('.Label ',' String ')' 
	write_st:  Write '('.jsonstr_st ',' String ')' 

	String  shift 103
	Number  shift 104
	Label  shift 101
	JsonStr  shift 73
	Bool  shift 105
	.  error

	Value  goto 100
	jsonstr_st  goto 102

state 54
	read_st:  Read '('.String ')' 

	String  shift 106
	.  error


state 55
	append_st:  Append '('.Value ',' String ')' 
	append_st:  Append '('.Label ',' String ')' 
	append_st:  Append '('.jsonstr_st ',' String ')' 

	String  shift 103
	Number  shift 104
	Label  shift 108
	JsonStr  shift 73
	Bool  shift 105
	.  error

	Value  goto 107
	jsonstr_st  goto 109

state 56
	field_st:  Label.'.' Label 
	if_st:  If Label.CodeBlock 

	CodeBlock  shift 110
	'.'  shift 39
	.  error


state 57
	if_st:  If Bool.CodeBlock 

	CodeBlock  shift 111
	.  error


state 58
	field_st:  field_st.'.' Label 
	if_st:  If field_st.CodeBlock 

	CodeBlock  shift 112
	'.'  shift 41
	.  error


state 59
	for_st:  For Number.CodeBlock 

	CodeBlock  shift 113
	.  error


state 60
	string_st:  StringFunc '('.Label ')' 
	string_st:  StringFunc '('.field_st ')' 

	Label  shift 114
	.  error

	field_st  goto 115

state 61
	assignment:  Label '=' eval_expr.    (44)
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	.  reduce 44 (src line 103)


state 62
	assignment:  Label '=' network_st.    (45)

	.  reduce 45 (src line 105)


state 63
	assignment:  Label '=' json_st.    (46)

	.  reduce 46 (src line 106)


state 64
	assignment:  Label '=' jsonstr_st.    (47)

	.  reduce 47 (src line 107)


state 65
	eval_expr:  Number.    (56)

	.  reduce 56 (src line 119)


state 66
	eval_expr:  String.    (57)

	.  reduce 57 (src line 121)


state 67
	eval_expr:  Label.    (58)
	field_st:  Label.'.' Label 

	'.'  shift 39
	.  reduce 58 (src line 122)


state 68
	eval_expr:  arith_st.    (59)

	.  reduce 59 (src line 123)


state 69
	eval_expr:  Bool.    (60)

	.  reduce 60 (src line 124)


state 70
	eval_expr:  field_st.    (61)
	field_st:  field_st.'.' Label 

	'.'  shift 41
	.  reduce 61 (src line 125)


state 71
	eval_expr:  read_st.    (63)

	.  reduce 63 (src line 127)


state 72
	json_st:  Json.'(' String ')' 
	json_st:  Json.'(' Label ')' 
	json_st:  Json.'(' field_st ')' 

	'('  shift 116
	.  error


state 73
	jsonstr_st:  JsonStr.'(' String ')' 
	jsonstr_st:  JsonStr.'(' Label ')' 
	jsonstr_st:  JsonStr.'(' field_st ')' 

	'('  shift 117
	.  error


state 74
	field_st:  Label '.' Label.    (76)

	.  reduce 76 (src line 150)


state 75
	assignment:  field_st '=' json_st.    (48)

	.  reduce 48 (src line 108)


state 76
	assignment:  field_st '=' eval_expr.    (49)
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	.  reduce 49 (src line 109)


state 77
	assignment:  field_st '=' jsonstr_st.    (50)

	.  reduce 50 (src line 110)


state 78
	assignment:  field_st '=' network_st.    (51)

	.  reduce 51 (src line 111)


state 79
	field_st:  field_st '.' Label.    (77)

	.  reduce 77 (src line 154)


state 80
	print_st:  Print '(' Value.')' 

	')'  shift 118
	.  error


state 81
	print_st:  Print '(' Label.')' 
	eval_expr:  Label.    (58)
	field_st:  Label.'.' Label 

	')'  shift 119
	'.'  shift 39
	.  reduce 58 (src line 122)


state 82
	print_st:  Print '(' ')'.    (24)

	.  reduce 24 (src line 70)


state 83
	print_st:  Print '(' field_st.')' 
	eval_expr:  field_st.    (61)
	field_st:  field_st.'.' Label 

	')'  shift 120
	'.'  shift 41
	.  reduce 61 (src line 125)


state 84
	print_st:  Print '(' network_st.')' 

	')'  shift 121
	.  error


state 85
	print_st:  Print '(' jsonstr_st.')' 

	')'  shift 122
	.  error


state 86
	print_st:  Print '(' arith_st.')' 
	eval_expr:  arith_st.    (59)

	')'  shift 123
	.  reduce 59 (src line 123)


state 87
	print_st:  Print '(' string_st.')' 
	eval_expr:  string_st.    (62)

	')'  shift 124
	.  reduce 62 (src line 126)


state 88
	type_st:  Type '(' Label.')' 

	')'  shift 125
	.  error


state 89
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr '+' eval_expr.    (52)
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'*'  shift 46
	'/'  shift 47
	.  reduce 52 (src line 113)


state 90
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr '-' eval_expr.    (53)
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 

	'*'  shift 46
	'/'  shift 47
	.  reduce 53 (src line 115)


state 91
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr '*' eval_expr.    (54)
	arith_st:  eval_expr.'/' eval_expr 

	.  reduce 54 (src line 116)


state 92
	arith_st:  eval_expr.'+' eval_expr 
	arith_st:  eval_expr.'-' eval_expr 
	arith_st:  eval_expr.'*' eval_expr 
	arith_st:  eval_expr.'/' eval_expr 
	arith_st:  eval_expr '/' eval_expr.    (55)

	.  reduce 55 (src line 117)


state 93
	header_st:  header_st.header_sg 
	network_st:  Get String header_st.body_st 
	body_st: .    (70)

	Header  shift 95
	Body  shift 128
	.  reduce 70 (src line 140)

	header_sg  goto 126
	body_st  goto 127

state 94
	header_st:  header_sg.    (65)

	.  reduce 65 (src line 132)


state 95
	header_sg:  Header.String 

	String  shift 129
	.  error


state 96
	header_st:  header_st.header_sg 
	network_st:  Put String header_st.body_st 
	body_st: .    (70)

	Header  shift 95
	Body  shift 128
	.  reduce 70 (src line 140)

	header_sg  goto 126
	body_st  goto 130

state 97
	header_st:  header_st.header_sg 
	network_st:  Post String header_st.body_st 
	body_st: .    (70)

	Header  shift 95
	Body  shift 128
	.  reduce 70 (src line 140)

	header_sg  goto 126
	body_st  goto 131

state 98
	header_st:  header_st.header_sg 
	network_st:  Delete String header_st.body_st 
	body_st: .    (70)

	Header  shift 95
	Body  shift 128
	.  reduce 70 (src line 140)

	header_sg  goto 126
	body_st  goto 132

state 99
	header_st:  header_st.header_sg 
	network_st:  Head String header_st.body_st 
	body_st: .    (70)

	Header  shift 95
	Body  shift 128
	.  reduce 70 (src line 140)

	header_sg  goto 126
	body_st  goto 133

state 100
	write_st:  Write '(' Value.',' String ')' 

	','  shift 134
	.  error


state 101
	write_st:  Write '(' Label.',' String ')' 

	','  shift 135
	.  error


state 102
	write_st:  Write '(' jsonstr_st.',' String ')' 

	','  shift 136
	.  error


state 103
	Value:  String.    (19)

	.  reduce 19 (src line 64)


state 104
	Value:  Number.    (20)

	.  reduce 20 (src line 65)


state 105
	Value:  Bool.    (21)

	.  reduce 21 (src line 65)


state 106
	read_st:  Read '(' String.')' 

	')'  shift 137
	.  error


state 107
	append_st:  Append '(' Value.',' String ')' 

	','  shift 138
	.  error


state 108
	append_st:  Append '(' Label.',' String ')' 

	','  shift 139
	.  error


state 109
	append_st:  Append '(' jsonstr_st.',' String ')' 

	','  shift 140
	.  error


state 110
	if_st:  If Label CodeBlock.    (80)

	.  reduce 80 (src line 162)


state 111
	if_st:  If Bool CodeBlock.    (81)

	.  reduce 81 (src line 164)


state 112
	if_st:  If field_st CodeBlock.    (82)

	.  reduce 82 (src line 165)


state 113
	for_st:  For Number CodeBlock.    (83)

	.  reduce 83 (src line 167)


state 114
	field_st:  Label.'.' Label 
	string_st:  StringFunc '(' Label.')' 

	')'  shift 141
	'.'  shift 39
	.  error


state 115
	field_st:  field_st.'.' Label 
	string_st:  StringFunc '(' field_st.')' 

	')'  shift 142
	'.'  shift 41
	.  error


state 116
	json_st:  Json '('.String ')' 
	json_st:  Json '('.Label ')' 
	json_st:  Json '('.field_st ')' 

	String  shift 143
	Label  shift 144
	.  error

	field_st  goto 145

state 117
	jsonstr_st:  JsonStr '('.String ')' 
	jsonstr_st:  JsonStr '('.Label ')' 
	jsonstr_st:  JsonStr '('.field_st ')' 

	String  shift 146
	Label  shift 147
	.  error

	field_st  goto 148

state 118
	print_st:  Print '(' Value ')'.    (22)

	.  reduce 22 (src line 67)


state 119
	print_st:  Print '(' Label ')'.    (23)

	.  reduce 23 (src line 69)


state 120
	print_st:  Print '(' field_st ')'.    (25)

	.  reduce 25 (src line 71)


state 121
	print_st:  Print '(' network_st ')'.    (26)

	.  reduce 26 (src line 72)


state 122
	print_st:  Print '(' jsonstr_st ')'.    (27)

	.  reduce 27 (src line 73)


state 123
	print_st:  Print '(' arith_st ')'.    (28)

	.  reduce 28 (src line 74)


state 124
	print_st:  Print '(' string_st ')'.    (29)

	.  reduce 29 (src line 75)


state 125
	type_st:  Type '(' Label ')'.    (37)

	.  reduce 37 (src line 90)


state 126
	header_st:  header_st header_sg.    (66)

	.  reduce 66 (src line 134)


state 127
	network_st:  Get String header_st body_st.    (71)

	.  reduce 71 (src line 142)


state 128
	body_st:  Body.String 
	body_st:  Body.json_st 

	String  shift 149
	Json  shift 72
	.  error

	json_st  goto 150

state 129
	header_sg:  Header String.    (64)

	.  reduce 64 (src line 129)


state 130
	network_st:  Put String header_st body_st.    (72)

	.  reduce 72 (src line 144)


state 131
	network_st:  Post String header_st body_st.    (73)

	.  reduce 73 (src line 145)


state 132
	network_st:  Delete String header_st body_st.    (74)

	.  reduce 74 (src line 146)


state 133
	network_st:  Head String header_st body_st.    (75)

	.  reduce 75 (src line 147)


state 134
	write_st:  Write '(' Value ','.String ')' 

	String  shift 151
	.  error


state 135
	write_st:  Write '(' Label ','.String ')' 

	String  shift 152
	.  error


state 136
	write_st:  Write '(' jsonstr_st ','.String ')' 

	String  shift 153
	.  error


state 137
	read_st:  Read '(' String ')'.    (36)

	.  reduce 36 (src line 87)


state 138
	append_st:  Append '(' Value ','.String ')' 

	String  shift 154
	.  error


state 139
	append_st:  Append '(' Label ','.String ')' 

	String  shift 155
	.  error


state 140
	append_st:  Append '(' jsonstr_st ','.String ')' 

	String  shift 156
	.  error


state 141
	string_st:  StringFunc '(' Label ')'.    (78)

	.  reduce 78 (src line 158)


state 142
	string_st:  StringFunc '(' field_st ')'.    (79)

	.  reduce 79 (src line 160)


state 143
	json_st:  Json '(' String.')' 

	')'  shift 157
	.  error


state 144
	json_st:  Json '(' Label.')' 
	field_st:  Label.'.' Label 

	')'  shift 158
	'.'  shift 39
	.  error


state 145
	json_st:  Json '(' field_st.')' 
	field_st:  field_st.'.' Label 

	')'  shift 159
	'.'  shift 41
	.  error


state 146
	jsonstr_st:  JsonStr '(' String.')' 

	')'  shift 160
	.  error


state 147
	jsonstr_st:  JsonStr '(' Label.')' 
	field_st:  Label.'.' Label 

	')'  shift 161
	'.'  shift 39
	.  error


state 148
	jsonstr_st:  JsonStr '(' field_st.')' 
	field_st:  field_st.'.' Label 

	')'  shift 162
	'.'  shift 41
	.  error


state 149
	body_st:  Body String.    (68)

	.  reduce 68 (src line 137)


state 150
	body_st:  Body json_st.    (69)

	.  reduce 69 (src line 139)


state 151
	write_st:  Write '(' Value ',' String.')' 

	')'  shift 163
	.  error


state 152
	write_st:  Write '(' Label ',' String.')' 

	')'  shift 164
	.  error


state 153
	write_st:  Write '(' jsonstr_st ',' String.')' 

	')'  shift 165
	.  error


state 154
	append_st:  Append '(' Value ',' String.')' 

	')'  shift 166
	.  error


state 155
	append_st:  Append '(' Label ',' String.')' 

	')'  shift 167
	.  error


state 156
	append_st:  Append '(' jsonstr_st ',' String.')' 

	')'  shift 168
	.  error


state 157
	json_st:  Json '(' String ')'.    (38)

	.  reduce 38 (src line 93)


state 158
	json_st:  Json '(' Label ')'.    (39)

	.  reduce 39 (src line 95)


state 159
	json_st:  Json '(' field_st ')'.    (40)

	.  reduce 40 (src line 96)


state 160
	jsonstr_st:  JsonStr '(' String ')'.    (41)

	.  reduce 41 (src line 98)


state 161
	jsonstr_st:  JsonStr '(' Label ')'.    (42)

	.  reduce 42 (src line 100)


state 162
	jsonstr_st:  JsonStr '(' field_st ')'.    (43)

	.  reduce 43 (src line 101)

